--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
             </intent-filter>
         </service>
         <receiver android:name=".AlarmReceiver"/>
+        <receiver android:name=".NotifierAlarm"/>
         <activity android:name=".UserProfile" />
         <activity android:name=".UserProfileHomeTutor" />
         <activity android:name=".MessageActivity" />
